--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="css/brands.css">
   <link rel="stylesheet" href="css/bulb.css">
   <link rel="stylesheet" href="css/docoration.css">
-  <link rel="stylesheet" href="CSS/smart.css">
+  <link rel="stylesheet" href="css/smart.css">
   <link rel="stylesheet" href="css/spot.css">
 
   <link rel="shortcut icon" href="" type="image/x-icon">
